k8s/traefik-rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-system
